--- a/assets/base.css
+++ b/assets/base.css
@@ -17,13 +17,13 @@
   --cyan: #22b8cf;
   --green: #37b679;
   --red: #da3c3c;
-  --pink: #e64980;
-  --purple: #f81ce5;
+  --pink: #f9bd5b;
+  --purple: #f9bd5b;
 
   --blue: #0070f3;
 
-  --violet-light: #7048e8;
-  --violet: #5f3dc4;
+  --violet-light: #ed5f4b;
+  --violet: #ed5f4b;
 
   --accents-0: #f8f9fa;
   --accents-1: #f1f3f5;
